+ fix font-sizing and spacing for cart items

--- a/client/src/components/ShoppingCart/CartItem.scss
+++ b/client/src/components/ShoppingCart/CartItem.scss
@@ -3,7 +3,7 @@
   align-items: center;
   justify-content: space-between;
   padding: 1em;
-  margin: 0 0 1em;
+  margin: 0 0 2em;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 
   .item-container {
@@ -27,7 +27,6 @@
       }
 
       .title {
-        font-size: 1.2em;
         font-weight: 600;
         margin-bottom: 1rem;
       }
@@ -39,7 +38,7 @@
   }
   .price {
     text-align: center;
-    font-size: 2em;
+    font-size: 3em;
     font-weight: 600;
     margin-bottom: 0.5em;
   }
